# MyGame

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
config/: config.h.in
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  camera.cpp  player.cpp  world.cpp
src/engine/headers/: camera.hpp  player.hpp  world.hpp
src/engine/utils/: CMakeLists.txt  textureUtils.cpp  textureUtils.hpp
